--- a/openstack/私有云业务理解.md
+++ b/openstack/私有云业务理解.md
@@ -6,8 +6,28 @@
 
 [http://developer.openstack.org/api-ref-image-v1.html](http://developer.openstack.org/api-ref-image-v1.html "Image service API")
 
+[http://docs.openstack.org/cli-reference/glance.html](http://docs.openstack.org/cli-reference/glance.html
+"Image service CLI")
+
+
 ### 功能一览 ###
 - 同步镜像: 将底层状态为“Active”镜像信息同步到前端数据库，展示到画面，以一览的方式显示。
 - 上传镜像: 将本地制作好的镜像上传到openstack环境，用于创建虚拟机。(前端是通过异步的方式)
 - 启用/禁用镜像: 只有启用状态的镜像才可以用来创建模板，禁用状态下的镜像不可以创建模板。如果已经创建了模板，再禁用镜像，则模板可正常使用，不受镜像影响。
 - 镜像删除: 只有自己上传的镜像可以删除，同步过来的镜像不可删除。
+
+### 常用底层命令 ###
+- glance image-list 镜像一览
+- glance image-delete [id] 删除指定id的镜像
+- glance image-create --name xxx --disk-format raw --container-format bare --file xxx.raw
+
+
+## 集群管理 - ISO ##
+openstack本身支持不好，底层2次开发。目前底层使用NFS服务器共享所有ISO文件。
+
+相关API: [http://172.16.5.108/publish-docs/chinac/api-docs/nova/cdrom.html](http://172.16.5.108/publish-docs/chinac/api-docs/nova/cdrom.html)
+
+- 同步ISO: 将底层的iso信息同步到前端数据库，展示到画面，以一览的方式显示。
+- 上传ISO: 
+- 启用/禁用ISO: 
+- 镜像ISO:
