--- a/openstack/私有云业务理解.md
+++ b/openstack/私有云业务理解.md
@@ -12,7 +12,7 @@
 
 ### 功能一览 ###
 - 同步镜像: 将底层状态为“Active”镜像信息同步到前端数据库，展示到画面，以一览的方式显示。
-- 上传镜像: 将本地制作好的镜像上传到openstack环境，用于创建虚拟机。(前端是通过异步的方式)
+- 上传镜像: 将本地制作好的镜像上传到openstack环境，用于创建虚拟机。(前端是通过异步的方式上传文件)
 - 启用/禁用镜像: 只有启用状态的镜像才可以用来创建模板，禁用状态下的镜像不可以创建模板。如果已经创建了模板，再禁用镜像，则模板可正常使用，不受镜像影响。
 - 镜像删除: 只有自己上传的镜像可以删除，同步过来的镜像不可删除。
 
@@ -23,11 +23,18 @@
 
 
 ## 集群管理 - ISO ##
-openstack本身支持不好，底层2次开发。目前底层使用NFS服务器共享所有ISO文件。
+openstack本身支持不好，底层2次开发。目前底层使用NFS服务器共享所有ISO文件。在集群中搭建FTP服务器，包裹NFS服务器对外提供ISO文件上传入口。
 
 相关API: [http://172.16.5.108/publish-docs/chinac/api-docs/nova/cdrom.html](http://172.16.5.108/publish-docs/chinac/api-docs/nova/cdrom.html)
 
+- FTP信息录入: 将集群的FTP服务器信息录入(包含IP,端口,用户名,密码)。
 - 同步ISO: 将底层的iso信息同步到前端数据库，展示到画面，以一览的方式显示。
-- 上传ISO: 
-- 启用/禁用ISO: 
-- 镜像ISO:
+- 上传ISO: 将本地制作好的ISO文件通过ftp协议上传到FTP服务器，后端集群中的各个节点通过NFS服务器自动获取到相关文件。(前端是通过异步的方式上传文件)
+- 启用/禁用ISO: 只有启用状态的ISO文件才可以挂载到虚拟机。
+- 修改ISO: 修改ISO的相关信息。
+- ISO删除:只有自己上传的ISO文件可以删除，同步过来的ISO文件不可删除。
+
+        光盘挂载完后，可以通过如下命令加载
+        mkdir isoformount
+        mount -t auto -o ro /dev/cdrom ./isoformount
+
